--- a/ecom/templates/ecom/admin_dashboard_cards.html
+++ b/ecom/templates/ecom/admin_dashboard_cards.html
@@ -207,7 +207,7 @@
     <div class="col-md-3 market-update-gd">
       <div class="market-update-block clr-block-4">
         <div class="col-md-8 market-update-left">
-          <h3>{{ordercount}}</h3>
+          <h3>{{invoicecount}}</h3>
           <h4>Tổng hóa đơn</h4>
 
         </div>
