--- a/ecom/templates/ecom/my_order.html
+++ b/ecom/templates/ecom/my_order.html
@@ -200,7 +200,7 @@ p {
                     
                     
                     </div> <br>
-                    <h4><a style="text-decoration:none;" href="{% url 'download-invoice' order.id product.id  %}" ><button class="btn btn-danger btn-sm">Xem hóa đơn</button></a></h4>
+                    <h4><a style="text-decoration:none;" href="{% url 'download-order' order.id product.id  %}" ><button class="btn btn-danger btn-sm">Xem hóa đơn</button></a></h4>
                 </li>
                 {%endfor%}
             </ul>
