--- a/ecom/templates/ecom/update_order.html
+++ b/ecom/templates/ecom/update_order.html
@@ -57,7 +57,7 @@
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>Update Status Of Order</p>
+        <p>Cập nhật trạng thái đơn hàng</p>
       </div>
       <div class="form-content">
 
