--- a/ecom/templates/ecom/admin_dashboard.html
+++ b/ecom/templates/ecom/admin_dashboard.html
@@ -36,11 +36,11 @@
           <td> {{p.name}}</td>
           <td> <img src="{% static p.product_image.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
 
-          {% if order.status == 'Pending'%}
+          {% if order.status == 'Đang chờ xác nhận'%}
           <td> <span class="label label-info">{{order.status}}</span></td>
-          {% elif order.status == 'Delivered' %}
+          {% elif order.status == 'Đã giao hàng' %}
           <td> <span class="label label-success">{{order.status}}</span></td>
-          {% elif order.status == 'Out for Delivery' %}
+          {% elif order.status == 'Đang giao hàng' %}
           <td> <span class="label label-warning">{{order.status}}</span></td>
           {%else%}
             <td> <span class="label label-primary">{{order.status}}</span></td>
