--- a/ecom/templates/ecom/my_order.html
+++ b/ecom/templates/ecom/my_order.html
@@ -188,11 +188,11 @@ p {
                 <li class="col-md-4">
                     <div class="col"> <strong>Trạng thái:</strong>
                     
-                        {% if order.status == 'Pending'%}
+                        {% if order.status == 'Đang chờ xác nhận'%}
                         <td> <span class="label label-info" style="font-size: 12px; border-radius: 30px;">{{order.status}}</span></td>
-                        {% elif order.status == 'Delivered' %}
+                        {% elif order.status == 'Đã giao hàng' %}
                         <td> <span class="label label-success" style="font-size: 12px; border-radius: 30px;">{{order.status}}</span></td>
-                        {% elif order.status == 'Out for Delivery' %}
+                        {% elif order.status == 'Đang giao hàng' %}
                         <td> <span class="label label-default" style="font-size: 12px; border-radius: 30px;">{{order.status}}</span></td>
                         {%else%}
                           <td> <span class="label label-primary" style="font-size: 12px; border-radius: 30px;">{{order.status}}</span></td>
@@ -207,17 +207,17 @@ p {
             <hr>
 
             <div class="track">
-                {%if order.status == 'Pending' %}
+                {%if order.status == 'Pending' or order.status == 'Đang chờ xác nhận' %}
                 <div class="step active"> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-spinner"></i> </span> <span class="text">Đang chờ xác nhận</span> </div>
                 <div class="step "> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-check"></i> </span> <span class="text"> Đã xác nhận đơn hàng</span> </div>
                 <div class="step "> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-truck"></i> </span> <span class="text"> Đang giao </span> </div>
                 <div class="step "> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-home"></i> </span> <span class="text">Đã giao</span> </div>
-                {%elif order.status == 'Order Confirmed' %}
+                {%elif order.status == 'Order Confirmed' or order.status == 'Xác nhận đơn hàng' %}
                 <div class="step active"> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-spinner"></i> </span> <span class="text">Đang chờ xác nhận</span> </div>
                 <div class="step active"> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-check"></i> </span> <span class="text"> Đã xác nhận đơn hàng</span> </div>
                 <div class="step "> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-truck"></i> </span> <span class="text"> Đang giao </span> </div>
                 <div class="step "> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-home"></i> </span> <span class="text">Đã giao</span> </div>
-                {%elif order.status == 'Out for Delivery'%}
+                {%elif order.status == 'Out for Delivery' or order.status == 'Đang giao hàng' %}
                 <div class="step active"> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-spinner"></i> </span> <span class="text">Đang chờ xác nhận</span> </div>
                 <div class="step active"> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-check"></i> </span> <span class="text"> Đã xác nhận đơn hàng</span> </div>
                 <div class="step active"> <span class="icon"> <i style="padding-top:3px; padding-right:25px;" class="fa fa-truck"></i> </span> <span class="text"> Đang giao </span> </div>
